@@ -1,5 +1,6 @@
 // Copyright © 2016-2018 Andy Goryachev <andy@goryachev.com>
 package goryachev.fx.hacks;
+import goryachev.common.util.ByteArrayClassLoader;
 import goryachev.common.util.CKit;
 import goryachev.fx.edit.CHitInfo;
 import java.util.List;
@@ -13,7 +14,10 @@ import javafx.stage.Window;
  * 
  * This class undoes access restrictions imposed on us by the FX developers.
  * the idea is to have two implementations - one for Java 8 and one for Java 9 where
- * supposedly all the necessary internal machinery will have been made public. 
+ * supposedly all the necessary internal machinery will have been made public.
+ * 
+ * Development of java 8 and java 9 hacks is being done as part of FxEditor project
+ * https://github.com/andy-goryachev/FxEditor/ 
  */
 public abstract class FxHacks
 {
@@ -31,6 +35,9 @@ public abstract class FxHacks
 	
 	/** applies global stylesheet on top of the javafx one */
 	public abstract void applyStyleSheet(String old, String cur);
+	
+	/** applies global stylesheet to a specific window on top of the javafx one */
+	public abstract void applyStyleSheet(Window w, String old, String cur);
 	
 	/** returns the list of Windows */
 	public abstract List<Window> getWindows();
@@ -63,8 +70,8 @@ public abstract class FxHacks
 			String name = getHackName();
 			byte[] b = CKit.readBytes(FxHacks.class, name + ".bin");
 			
-			Class<?> c = new FxClassLoader().load(packageName + "." + name, b);
-			return (FxHacks)c.newInstance();
+			Class<?> c = new ByteArrayClassLoader().load(packageName + "." + name, b);
+			return (FxHacks)c.getDeclaredConstructor().newInstance();
 		}
 		catch(Exception e)
 		{
@@ -77,25 +84,13 @@ public abstract class FxHacks
 	{
 		if(CKit.isJava9OrLater())
 		{
-			// this class lives on java9-hacks branch
+			// this class lives on FxEditor java9-hacks branch
 			return "FxHacksJava9";
 		}
 		else
 		{
-			// this class lives on java8-hacks branch
+			// this class lives on FxEditor java8-hacks branch
 			return "FxHacksJava8";
-		}
-	}
-	
-	
-	//
-	
-	
-	protected static class FxClassLoader extends ClassLoader
-	{
-		public Class<?> load(String name, byte[] b)
-		{
-			return defineClass(name, b, 0, b.length);
 		}
 	}
 }
